--- a/samacheer-pdf-server/requirements.txt
+++ b/samacheer-pdf-server/requirements.txt
@@ -18,6 +18,7 @@ httpx==0.26.0
 idna==3.11
 iniconfig==2.3.0
 jiter==0.12.0
+Markdown==3.10
 openai==2.14.0
 packaging==25.0
 pdfminer.six==20251230
@@ -28,6 +29,7 @@ pycparser==2.23
 pydantic==2.5.3
 pydantic-settings==2.1.0
 pydantic_core==2.14.6
+pymdown-extensions==10.20
 PyPDF2==3.0.1
 pypdfium2==5.3.0
 PySocks==1.7.1
